Fixed bugs when looking on mobile device

--- a/css/navbar-redesign.css
+++ b/css/navbar-redesign.css
@@ -25,12 +25,7 @@ body {
     color: black;
 }
 
-@media screen and (max-width: 500px) {
-    .container-404 a {
-        float: none;
-        display: block;
-    }
-}
+
 
 .acm-logo a {
     margin: auto;
@@ -93,4 +88,80 @@ body {
 /* scrollbar Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #909094;
+}
+
+@media screen and (max-width: 850px) {
+    .container-404 a {
+        float: none;
+        display: block;
+    }
+    body {
+        background-color: black;
+        font-size: 25px;
+    }
+
+    .container-404 {
+        background-color: #646262;
+        overflow: hidden;
+        display: inline-flex;
+        align-items: left;
+        width: 100%;
+    }
+
+    .container-404 a {
+        padding: 12px;
+        color: white;
+        text-decoration: none;
+        font-size: 17px;
+        font-weight: bold;
+        vertical-align: middle;
+    }
+
+    .container-404 a:hover {
+        background-color: #646262;
+        color: black;
+    }
+    .acm-logo a {
+        margin: auto;
+        display: flex;
+    }
+
+    .acm-logo a:hover {
+        background-color: #646262;
+    }
+
+    .options {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        vertical-align: middle;
+    }
+
+    .options a {
+        display: inline-block;
+        text-decoration: none;
+        font-size: 17px;
+        font-weight: bold;
+    }
+
+    .error {
+        font-size: 200px;
+        margin: auto;
+        width: 400px;
+        color: grey;
+        font-family: 'Heebo', sans-serif;
+        margin-top: 50px;
+        align-items: center;
+    }
+
+    .p {
+        color: grey
+    }
+
+    .row {
+        color: grey
+    }
+
 }
